--- a/.github/workflows/aion-structure.yml
+++ b/.github/workflows/aion-structure.yml
@@ -3,12 +3,12 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - '**'  # Trigger on any file change
+      - '**'
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch: true
   schedule:
-    - cron: '0 0 * * *'  # Daily at midnight UTC
+    - cron: '0 0 * * *'
 
 jobs:
   scan-structure:
@@ -82,17 +82,17 @@ with open(output_dir / 'stats.json', 'w') as f:
     json.dump(stats, f, indent=2)
 
 with open(output_dir / 'STRUCTURE.MD', 'w') as f:
-    f.write(f"# 📊 AION-BRAIN Repository Stats\\n\\n")
-    f.write(f"**Last Scan:** {stats['scan_time']}\\n\\n")
-    f.write(f"- **Total Files:** {total_files}\\n")
-    f.write(f"- **Total Directories:** {total_dirs}\\n")
-    f.write(f"- **Python Files:** {python_files}\\n")
-    f.write(f"- **Markdown Files:** {md_files}\\n")
-    f.write(f"- **YAML Files:** {yaml_files}\\n\\n")
-    f.write("## Recent Files (first 20):\\n```\\n")
+    f.write("# 📊 AION-BRAIN Repository Stats\n\n")
+    f.write(f"**Last Scan:** {stats['scan_time']}\n\n")
+    f.write(f"- **Total Files:** {total_files}\n")
+    f.write(f"- **Total Directories:** {total_dirs}\n")
+    f.write(f"- **Python Files:** {python_files}\n")
+    f.write(f"- **Markdown Files:** {md_files}\n")
+    f.write(f"- **YAML Files:** {yaml_files}\n\n")
+    f.write("## Recent Files (first 20):\n```\n")
     for file in sorted(file_list)[:20]:
-        f.write(f"{file}\\n")
-    f.write("```\\n")
+        f.write(f"{file}\n")
+    f.write("```\n")
 
 print(f"✅ Scan complete!")
 print(f"📁 Directories: {total_dirs}")
