--- a/.github/workflows/aion-structure.yml
+++ b/.github/workflows/aion-structure.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch: 'true'
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
