--- a/.github/workflows/aion-structure.yml
+++ b/.github/workflows/aion-structure.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-          persist-credentials: 'true'
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,98 +30,95 @@ jobs:
 
       - name: Run structure scanner
         run: |
-          python3 << 'EOF'
-          import os
-          import json
-          from pathlib import Path
-          from datetime import datetime
-          
-          print("📁 Scanning AION-BRAIN repository...")
-          
-          total_files = total_dirs = python_files = md_files = yaml_files = 0
-          file_list = []
-          
-          for root, dirs, files in os.walk('.'):
-              dirs[:] = [d for d in dirs if not d.startswith('.')]
-              skip_dirs = {'.git', '.github', '__pycache__', 'node_modules', 'venv', '.aions-structure-list'}
-              dirs[:] = [d for d in dirs if d not in skip_dirs]
-              
-              total_dirs += 1
-              
-              for file in files:
-                  if file.startswith('.'):
-                      continue
-                      
-                  total_files += 1
-                  filepath = os.path.join(root, file)
-                  
-                  if file.endswith('.py'):
-                      python_files += 1
-                  elif file.endswith('.md'):
-                      md_files += 1
-                  elif file.endswith('.yml') or file.endswith('.yaml'):
-                      yaml_files += 1
-                  
-                  file_list.append(filepath)
-          
-          stats = {
-              "total_files": total_files,
-              "total_directories": total_dirs,
-              "python_files": python_files,
-              "markdown_files": md_files,
-              "yaml_files": yaml_files,
-              "scan_time": datetime.now().isoformat()
-          }
-          
-          output_dir = Path('.aions-structure-list')
-          output_dir.mkdir(exist_ok=True)
-          
-          with open(output_dir / 'stats.json', 'w') as f:
-              json.dump(stats, f, indent=2)
-          
-          with open(output_dir / 'STRUCTURE.MD', 'w') as f:
-              f.write("# 📊 AION-BRAIN Repository Stats\n\n")
-              f.write(f"**Last Scan:** {stats['scan_time']}\n\n")
-              f.write(f"- **Total Files:** {total_files}\n")
-              f.write(f"- **Total Directories:** {total_dirs}\n")
-              f.write(f"- **Python Files:** {python_files}\n")
-              f.write(f"- **Markdown Files:** {md_files}\n")
-              f.write(f"- **YAML Files:** {yaml_files}\n\n")
-              f.write("## Recent Files (first 20):\n```\n")
-              for file in sorted(file_list)[:20]:
-                  f.write(f"{file}\n")
-              f.write("```\n")
-          
-          print(f"✅ Scan complete!")
-          print(f"📁 Directories: {total_dirs}")
-          print(f"📄 Files: {total_files}")
-          print(f"🐍 Python: {python_files}")
-          print(f"📚 Markdown: {md_files}")
-          print(f"⚙️  YAML: {yaml_files}")
-          EOF
+          python3 -c "
+import os, json
+from datetime import datetime
+
+print('📁 Scanning AION-BRAIN repository...')
+
+counts = {'files': 0, 'dirs': 0, 'python': 0, 'markdown': 0, 'yaml': 0}
+file_list = []
+
+for root, dirs, files in os.walk('.'):
+    # Skip hidden/system directories
+    dirs[:] = [d for d in dirs if d not in ['.git', '.github', '__pycache__', 'node_modules', 'venv', '.aions-structure-list']]
+    
+    counts['dirs'] += 1
+    
+    for file in files:
+        if file.startswith('.'):
+            continue
+            
+        counts['files'] += 1
+        path = os.path.join(root, file)
+        
+        if file.endswith('.py'):
+            counts['python'] += 1
+        elif file.endswith('.md'):
+            counts['markdown'] += 1
+        elif file.endswith(('.yml', '.yaml')):
+            counts['yaml'] += 1
+        
+        file_list.append(path)
+
+# Create output directory
+os.makedirs('.aions-structure-list', exist_ok=True)
+
+# Save stats
+with open('.aions-structure-list/stats.json', 'w') as f:
+    json.dump({
+        'total_files': counts['files'],
+        'total_directories': counts['dirs'],
+        'python_files': counts['python'],
+        'markdown_files': counts['markdown'],
+        'yaml_files': counts['yaml'],
+        'scan_time': datetime.now().isoformat()
+    }, f, indent=2)
+
+# Create structure file
+with open('.aions-structure-list/STRUCTURE.MD', 'w') as f:
+    f.write('# 📊 AION-BRAIN Repository Stats\n\n')
+    f.write(f\"Last Scan: {datetime.now().isoformat()}\\n\\n\")
+    f.write(f\"- **Total Files:** {counts['files']}\\n\")
+    f.write(f\"- **Total Directories:** {counts['dirs']}\\n\")
+    f.write(f\"- **Python Files:** {counts['python']}\\n\")
+    f.write(f\"- **Markdown Files:** {counts['markdown']}\\n\")
+    f.write(f\"- **YAML Files:** {counts['yaml']}\\n\\n\")
+    f.write('## Recent Files (first 20):\\n```\\n')
+    for file in sorted(file_list)[:20]:
+        f.write(f\"{file}\\n\")
+    f.write('```\\n')
+
+print(f\"✅ Scan complete!\")
+print(f\"📁 Directories: {counts['dirs']}\")
+print(f\"📄 Files: {counts['files']}\")
+print(f\"🐍 Python: {counts['python']}\")
+print(f\"📚 Markdown: {counts['markdown']}\")
+print(f\"⚙️  YAML: {counts['yaml']}\")
+"
 
       - name: Create badge snippet
         run: |
           if [ -f ".aions-structure-list/stats.json" ]; then
-            python3 << 'EOF'
-            import json
-            with open('.aions-structure-list/stats.json') as f:
-                stats = json.load(f)
-            
-            badge_md = f"""## 📊 Repository Stats
-            
-            ![Files](https://img.shields.io/badge/Files-{stats['total_files']}-blue)
-            ![Directories](https://img.shields.io/badge/Directories-{stats['total_directories']}-green)
-            ![Python](https://img.shields.io/badge/Python-{stats['python_files']}-yellow)
-            
-            *Updated automatically*"""
-            
-            with open('.aions-structure-list/BADGE-SNIPPET.md', 'w') as f:
-                f.write(badge_md)
-            
-            print("Badge snippet created!")
-            print(badge_md)
-            EOF
+            python3 -c "
+import json
+with open('.aions-structure-list/stats.json') as f:
+    stats = json.load(f)
+
+badge_text = f'''## 📊 Repository Stats
+
+![Files](https://img.shields.io/badge/Files-{stats['total_files']}-blue)
+![Directories](https://img.shields.io/badge/Directories-{stats['total_directories']}-green)
+![Python](https://img.shields.io/badge/Python-{stats['python_files']}-yellow)
+
+*Updated automatically*'''
+
+with open('.aions-structure-list/BADGE-SNIPPET.md', 'w') as f:
+    f.write(badge_text)
+
+print('Badge snippet created!')
+print(badge_text)
+"
           else
             echo "No stats file found"
           fi
