--- a/.github/workflows/research-validation.yml
+++ b/.github/workflows/research-validation.yml
@@ -4,19 +4,91 @@ on:
   workflow_dispatch:  # Manual trigger
     inputs:
       engine:
-        description: 'Which engine to validate'
+        description: 'Which engine to validate (e.g., "neural-core", "reasoning-module")'
         required: true
+        type: choice
+        options:
+        - neural-core
+        - reasoning-module
+        - symbolic-engine
+        default: 'neural-core'
       test_budget:
-        description: 'Budget in dollars'
+        description: 'Budget in dollars (e.g., 10.0)'
         required: true
+        type: string
+        default: '10.0'
+
+permissions:
+  contents: read
+  issues: write  # Allows creating GitHub Issues
 
 jobs:
-  validate:
+  validate-research:
     runs-on: ubuntu-latest
     steps:
-      - name: Calculate tests
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Log Inputs & Calculate Tests
+        id: calculate
         run: |
-          TESTS = ${{ inputs.test_budget }} / 0.025
-          echo "Running $TESTS validation tests"
-      # API calls to OpenAI/Anthropic
-      # Results → GitHub Issues with validation report
+          # Access workflow_dispatch inputs correctly
+          ENGINE="${{ github.event.inputs.engine }}"
+          BUDGET="${{ github.event.inputs.test_budget }}"
+          
+          # Basic input validation
+          echo "🔧 Validation Parameters:"
+          echo "Engine: $ENGINE"
+          echo "Budget: $$BUDGET"
+          
+          # Calculate tests (simple example: $0.025 per test)
+          # Using 'bc' for floating-point arithmetic
+          TESTS=$(echo "$BUDGET / 0.025" | bc)
+          echo "Number of tests to run: $TESTS"
+          
+          # Set outputs for later steps
+          echo "engine=$ENGINE" >> $GITHUB_OUTPUT
+          echo "tests=$TESTS" >> $GITHUB_OUTPUT
+          echo "budget=$BUDGET" >> $GITHUB_OUTPUT
+
+      - name: Simulate API Validation (Mock)
+        run: |
+          echo "🧪 Running MOCK validation for engine: ${{ steps.calculate.outputs.engine }}"
+          echo "📊 Mock Result: ${{ steps.calculate.outputs.tests }} tests completed successfully under budget $${{ steps.calculate.outputs.budget }}."
+          echo "✅ All mock validation checks passed."
+          # In the future, replace this with:
+          # - curl to OpenAI/Anthropic/Claude API
+          # - python script to process results
+
+      - name: Create Validation Report Issue
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Create a markdown report
+          REPORT_BODY=$(cat <<EOF
+  ### ✅ Research Validation Report
+  
+  **Workflow Run:** [#${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+  **Validated Engine:** \`${{ steps.calculate.outputs.engine }}\`
+  **Budget Used:** $${{ steps.calculate.outputs.budget }}
+  **Tests Simulated:** ${{ steps.calculate.outputs.tests }}
+  
+  **Status:** Validation simulation completed successfully.
+  
+  **Next Steps:**
+  1. Integrate with actual LLM API (OpenAI, Anthropic, etc.)
+  2. Implement real test prompts for the engine.
+  3. Parse and score API responses.
+  
+  *This is a mock report. Enable real API calls by adding secrets and uncommenting the API step.*
+  EOF
+          )
+          
+          # Use GitHub CLI to create an issue
+          echo "$REPORT_BODY" | gh issue create \
+            --title "[Research Validation] Results for ${{ steps.calculate.outputs.engine }} - Run #${{ github.run_number }}" \
+            --body-file - \
+            --label "validation,automated-report"
+          
+          echo "📝 Validation report issue created."
+        # The GitHub CLI (gh) is pre-installed on GitHub runners
